--- a/contact-us.html
+++ b/contact-us.html
@@ -198,12 +198,9 @@ drawMenus();
 <address><strong>Kerala, India</strong></address>
 <div>&nbsp;</div>
 <div style="text-align: justify;"><span style="color: rgb(255, 102, 0); "><strong>Mob : +91 9526451178</strong></span></div>
-<div style="text-align: justify;"><span style="color: rgb(255, 102, 0); "><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+91 8289971178</strong></span></div>
-<div style="text-align: justify;"><span style="color: rgb(255, 102, 0); "><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;+91 7736162781</strong></span></div>
 <div style="text-align: justify;">&nbsp;</div>
 <div style="text-align: justify;"><strong><span style="color: rgb(51, 51, 153); ">Email:&nbsp;info@bluemaxholidays.com</span></strong></div>
-<div style="text-align: justify;"><strong><span style="color: rgb(51, 51, 153); ">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;tour@bluemaxholidays.com</span></strong></div>
-<div style="text-align: justify;"><strong><span style="color: rgb(51, 51, 153); ">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;bluemaxholidays@gmail.com</span></strong></div></div></td>
+</div></td>
         <td valign="top">
 			        <form id="target"  method="post" action="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" name="booking_form">
 
@@ -456,8 +453,8 @@ drawMenus();
                         <div class="clear"></div>
                         </div>
 
-                        <div class="photogallery"><a href="http://bluemaxholidays.com/index.php?app=photo&tpl=view&task=showAll&mid=17">Photo Gallery</a></div>
-                        <div class="videogallery"><a href="http://bluemaxholidays.com/index.php?app=video&tpl=view&task=showAll&mid=18">Video Gallery</a></div>
+                        <div class="photogallery"><a href="http://bluemaxholidays.com/photo-gallery.html">Photo Gallery</a></div>
+                        <div class="videogallery"><a href="http://bluemaxholidays.com/video-gallery.html">Video Gallery</a></div>
 
                     </div>
 
@@ -467,8 +464,8 @@ drawMenus();
 
       <!--FOOTER AREA START-->
       <div id="Footer_area">
-                  <div id="Leftfooter">Copyright @ 2016 www.bluemaxholidays.com. All Rights Reserved </div>
-                  <div id="Rightfooter">Design & Developed by <a href="http://www.oxfotech.com/" target="_blank">www.oxfotech.com</a></div>
+                  <div id="Leftfooter">Copyright @ 2016 - 2023 www.bluemaxholidays.com. All Rights Reserved </div>
+                  <div id="Rightfooter">Design & Developed by <a href="http://www.danjose.pt/" target="_blank">www.danjose.pt</a></div>
                 </div>
 
 <!--Start of Zopim Live Chat Script-->
