--- a/contact-us.html
+++ b/contact-us.html
@@ -190,11 +190,8 @@ drawMenus();
     	<td width="30%" valign="top">
 
         <div style="padding:10px"><h2><strong>Bluemax Holidays</strong></h2>
-<address><strong>Near Cochin Intl. airport</strong></address>
-<address><strong>St. Gorge Complex</strong><strong><br />
-</strong><strong>Thiruvilamkunnu,&nbsp;</strong><strong>Mekkad P.O.</strong></address>
-<address><strong> Kariyad, Angamaly</strong></address>
-<address><strong>Cochin - 683589</strong></address>
+<address><strong> Yordhanapuram</strong></address>
+<address><strong>Cochin - 683574</strong></address>
 <address><strong>Kerala, India</strong></address>
 <div>&nbsp;</div>
 <div style="text-align: justify;"><span style="color: rgb(255, 102, 0); "><strong>Mob : +91 9526451178</strong></span></div>
