--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ with(menuStyleL=new mm_style()){
 		position="fixed";
 
 
-		}
+	}pro
 
 		with(link=new menuname("A3"))
 		{
@@ -399,8 +399,8 @@ Legend says that ancient system of medicine was.. instrcted to the ancient sages
 
                <!--FOOTER AREA START-->
                 <div id="Footer_area">
-                  <div id="Leftfooter">Copyright @ 2016 www.bluemaxholidays.com. All Rights Reserved </div>
-                  <div id="Rightfooter">Design & Developed by <a href="https://www.oxfotech.com/" target="_blank">www.oxfotech.com</a></div>
+                  <div id="Leftfooter">Copyright @ 2016 -2023 www.bluemaxholidays.com. All Rights Reserved </div>
+                  <div id="Rightfooter">Design & Developed by <a href="https://www.danjose.pt/" target="_blank">www.danjose.pt</a></div>
                 </div>
 
 <!--Start of Zopim Live Chat Script-->
