--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="robots" content="index,follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
+ <link rel="canonical" href="https://bluemaxholidays.com">
 <link rel="stylesheet" href="css/main.css" type="text/css" />
 <link href="js/slider.css" rel="stylesheet" type="text/css" />
 <!--Nvigation Start-->
