--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ drawMenus();
             					<ul>
                 	<li><a href="https://bluemaxholidays.com/index.html" class="active">Home</a></li>
                     <li><a href="https://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
-                    <li><a href="#" id='A3' onMouseOver='popup("A3","A3");' onMouseOut='popdown()' class="">Destinations</a></li>
+                    <li><a href="https://bluemaxholidays.com/kerala-taxi.html" class="">Cab Services</a></li>
                     <li><a href="https://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
                     <li><a href="https://bluemaxholidays.com/tour-packages.html" class="">Tour&nbsp;Packages</a></li>
                     <li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>
