--- a/kerala-taxi.html
+++ b/kerala-taxi.html
@@ -163,31 +163,69 @@ drawMenus();
     </div>
     <!--NAVIGATION AREA END-->
 
-    <div id="Banner"> <img src="http://bluemaxholidays.com/uploaded_files/banner/image_13.jpg" width="" height="" title="" alt="Inner 1" border="0"></div>
+		<div id="Banner"> </div>
 
 
-    <div id="Whatsnew_area">
-     <div id="Whatsnew_head">What’s New</div>
-      <div id="Whatsnew_textarea">
-        <ul>
-          <li></li>        </ul>
-      </div>
-      <div class="clear"></div>
-    </div>
+		<div id="Whatsnew_area">
+		 <div id="Whatsnew_head">What’s New</div>
+			<div id="Whatsnew_textarea">
+				<ul>
+					<li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6">Accommodation</a></li><li><a href="#" class="active"></a></li>        </ul>
+			</div>
+			<div class="clear"></div>
+		</div>
 
 
-    <!--CONTETN AREA START-->
-    <div id="ContentArea">
-      <h1></h1>
-      <div id="MainContentarea">
+		<!--CONTETN AREA START-->
+		<div id="ContentArea">
+			<h1>Accommodation</h1>
+			<div id="MainContentarea">
 
-        <!--LEFT CONTENT AREA START-->
-        <div id="LeftContentarea">
+				<!--LEFT CONTENT AREA START-->
+				<div id="LeftContentarea">
 
-      <p> </p>
-                <div class="clear"></div>
-        </div>
-        <!--LEFT CONTENT AREA END-->
+		<br />
+			<!--SELECT CATOGERY AREA START-->
+		<form name="search" action="" method="POST" style="padding:0px;margin:0px;">
+			<div class="catagory_area">
+				<div class="listmenu">
+					<select name="category_id" class="category">
+						<option value="">Select Category</option>
+						<option value="1" >2 Star</option><option value="2" >3*</option>          </select>
+				</div>
+
+				<div class="submitbtn_area">
+					<input name="" type="submit" class="submitbtn" value=""/>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</form>
+			<!--SELECT CATOGERY AREA END-->
+
+
+			<div class="tour_package">
+				<div class="tour_photo"><img src="assets/images/1no_photo.jpg" alt="" width="100%" height="100%"/></div>
+				<div class="tour_details">
+					<h4>test </h4>
+					<h5>Category : 2 Star</h5>
+					<p><strong>Location</strong> : Munnar</p>
+					<p>wer</p>
+					<div class="readmore"><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=details&mid=3&cid=4">Read More</a></div>
+				</div>
+				<div class="clear"></div>
+			</div>
+
+			<div class="tour_package">
+				<div class="tour_photo"><img src="uploaded_files/hotel/image_5.php" alt="" width="100%" height="100%"/></div>
+				<div class="tour_details">
+					<h4>y </h4>
+					<h5>Category : 2 Star</h5>
+					<p><strong>Location</strong> : Munnar</p>
+					<p></p>
+					<div class="readmore"><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=details&mid=3&cid=5">Read More</a></div>
+				</div>
+				<div class="clear"></div>
+			</div>
 
         <!--RIGHT CONTENT AREA START-->
 		         <div id="RightContentarea">
