--- a/kerala-taxi.html
+++ b/kerala-taxi.html
@@ -170,7 +170,7 @@ drawMenus();
 		 <div id="Whatsnew_head">What’s New</div>
 			<div id="Whatsnew_textarea">
 				<ul>
-					<li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6">Accommodation</a></li><li><a href="#" class="active"></a></li>        </ul>
+					<li style="background:none;"><a href="http://bluemaxholidays.com/kerala-taxi.html">Cab Services</a></li><li><a href="#" class="active"></a></li>        </ul>
 			</div>
 			<div class="clear"></div>
 		</div>
@@ -178,7 +178,7 @@ drawMenus();
 
 		<!--CONTETN AREA START-->
 		<div id="ContentArea">
-			<h1>Accommodation</h1>
+			<h1>Cab Services</h1>
 			<div id="MainContentarea">
 
 				<!--LEFT CONTENT AREA START-->
@@ -204,175 +204,28 @@ drawMenus();
 
 
 			<div class="tour_package">
-				<div class="tour_photo"><img src="assets/images/1no_photo.jpg" alt="" width="100%" height="100%"/></div>
+				<div class="tour_photo"><img src="assets/vehicles/image_4.jpg" alt="" width="100%" height="100%"/></div>
 				<div class="tour_details">
 					<h4>test </h4>
-					<h5>Category : 2 Star</h5>
-					<p><strong>Location</strong> : Munnar</p>
+					<h5>Category : 4 Seater</h5>
+					<p><strong>Vehicle</strong> : Car</p>
 					<p>wer</p>
-					<div class="readmore"><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=details&mid=3&cid=4">Read More</a></div>
+					<div class="readmore"><a href="http://bluemaxholidays.com/kerala-taxi-car.html">Read More</a></div>
 				</div>
 				<div class="clear"></div>
 			</div>
 
 			<div class="tour_package">
-				<div class="tour_photo"><img src="uploaded_files/hotel/image_5.php" alt="" width="100%" height="100%"/></div>
+				<div class="tour_photo"><img src="assets/vehicles/image_5.jpg" alt="" width="100%" height="100%"/></div>
 				<div class="tour_details">
 					<h4>y </h4>
-					<h5>Category : 2 Star</h5>
-					<p><strong>Location</strong> : Munnar</p>
+					<h5>Category : 18 Seater</h5>
+					<p><strong>Vehicle</strong> : Tourist Traveller</p>
 					<p></p>
-					<div class="readmore"><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=details&mid=3&cid=5">Read More</a></div>
+					<div class="readmore"><a href="http://bluemaxholidays.com/kerala-taxi-traveller.html">Read More</a></div>
 				</div>
 				<div class="clear"></div>
 			</div>
-
-        <!--RIGHT CONTENT AREA START-->
-		         <div id="RightContentarea">
-          <div id="RightLinks">
-		              <h2>Select Another District</h2>
-            <ul>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=38">Uttar Pradesh</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=37">Uttar Pradesh</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=36">Nepal</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=35">Kashmir</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=34">Hyderabad</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=33">Goa</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=1">Ernakulam</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=5">Idukki</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=16">Kottayam</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=2">Alappuzha</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=4">Kollam</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=3">Pathanamthitta</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=6">Thiruvananthapuram</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=11">Wayanad</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=15">Thrissur</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=14">Palakkad</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=13">Malappuram</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=12">Kozhikode</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=10">Kasaragod</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=7">Kannur</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=17">Bangalore</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=18">Mysore</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=20">Ooty</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=21">Masanagudi</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=22">Kodaikanal</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=24">Rameshwaram</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=23">Madurai</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=19">Coorg</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=28">Goa</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=8">Delhi</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=26">Jaipur</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=27">Manali</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=25">Agra</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=29">Dubai</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=30">Andaman Islands</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=31">Singapore</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=32">Malaysia</a></li>
-			             </ul>
-          </div>
-          <div class="clear"></div>
-        </div>
-        <!--RIGHT CONTENT AREA START-->
-
-        <div class="clear"></div>
-      </div>
-
-      <!--BTTOM LINKS AREA START-->
-		                <div id="BottomLinksarea">
-                	<div class="tourpackages" style="padding-left:0px;">
-                    	<h1>Tour Packages</h1>
-                        <ul>
-
-                            <li><a href="http://bluemaxholidays.com/ayurveda-health-tourism-package.html">Ayurveda Pack</a></li>
-
-                            <li><a href="http://bluemaxholidays.com/international-tour-package.html">International Tours</a></li>
-                                                  	</ul>
-
-
-
-                    </div>
-
-                    <div class="tourpackages">
-                    	<h1>Services</h1>
-                        <ul>
-                            <li><a href="http://bluemaxholidays.com/conference.html">Conference</a></li>
-                            <li><a href="http://bluemaxholidays.com/hotel-booking.html">Hotel Booking</a></li>
-                            <li><a href="http://bluemaxholidays.com/ticketing.html">Ticketing</a></li>
-                            <li><a href="http://bluemaxholidays.com/health-tourism.html">Health Tourism</a></li>
-                            <li><a href="http://bluemaxholidays.com/kerala-taxi.html">Kerala Taxi</a></li>
-                      	</ul>
-
-                    </div>
-
-                    <div class="tourpackages">
-                    	<h1>Know Kerala</h1>
-                        <ul>
-                            <li><a href="http://bluemaxholidays.com/overview.html">Overview</a></li>
-                            <li><a href="http://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
-                            <li><a href="http://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
-                            <li><a href="http://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
-                            <li><a href="http://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
-                      	</ul>
-
-                    </div>
-
-                    <div class="followus_area">
-                    	<h1>Follow Us on</h1>
-                        <div class="follow_icon">
-                            <ul>
-                                  <li style="margin:0;"><a href="#"><img src="images/follow_f.png" alt="" /></a></li>
-                                  <li><a href="#"><img src="images/follow_t.png" alt="" /></a></li>
-                                  <li><a href="#"><img src="images/follow_in.png" alt="" /></a></li>
-                                  <li><a href="#"><img src="images/follow_n.png" alt="" /></a></li>
-                            </ul>
-                        <div class="clear"></div>
-                        </div>
-
-                        <div class="photogallery"><a href="http://bluemaxholidays.com/index.php?app=photo&tpl=view&task=showAll&mid=17">Photo Gallery</a></div>
-                        <div class="videogallery"><a href="http://bluemaxholidays.com/index.php?app=video&tpl=view&task=showAll&mid=18">Video Gallery</a></div>
-
-                    </div>
-
-               <div class="clear"></div>
-               </div>
       <!--BTTOM LINKS AREA END-->
 
       <!--FOOTER AREA START-->
