--- a/kerala-taxi.html
+++ b/kerala-taxi.html
@@ -204,7 +204,7 @@ drawMenus();
 
 
 			<div class="tour_package">
-				<div class="tour_photo"><img src="assets/vehicles/image_4.jpg" alt="" width="100%" height="100%"/></div>
+				<div class="tour_photo"><img src="http://bluemaxholidays.com/assets/vehicles/image_4.jpg" alt="" width="100%" height="100%"/></div>
 				<div class="tour_details">
 					<h4>test </h4>
 					<h5>Category : 4 Seater</h5>
@@ -216,7 +216,7 @@ drawMenus();
 			</div>
 
 			<div class="tour_package">
-				<div class="tour_photo"><img src="assets/vehicles/image_5.jpg" alt="" width="100%" height="100%"/></div>
+				<div class="tour_photo"><img src="http://bluemaxholidays.com/assets/vehicles/image_5.jpg" alt="" width="100%" height="100%"/></div>
 				<div class="tour_details">
 					<h4>y </h4>
 					<h5>Category : 18 Seater</h5>
