--- a/kerala-taxi.html
+++ b/kerala-taxi.html
@@ -206,10 +206,10 @@ drawMenus();
 			<div class="tour_package">
 				<div class="tour_photo"><img src="http://bluemaxholidays.com/assets/vehicles/image_4.jpg" alt="" width="100%" height="100%"/></div>
 				<div class="tour_details">
-					<h4>test </h4>
+					<h4>Cabs </h4>
 					<h5>Category : 4 Seater</h5>
 					<p><strong>Vehicle</strong> : Car</p>
-					<p>wer</p>
+					<p>Contact : 9526451178</p>
 					<div class="readmore"><a href="http://bluemaxholidays.com/kerala-taxi-car.html">Read More</a></div>
 				</div>
 				<div class="clear"></div>
@@ -218,10 +218,10 @@ drawMenus();
 			<div class="tour_package">
 				<div class="tour_photo"><img src="http://bluemaxholidays.com/assets/vehicles/image_5.jpg" alt="" width="100%" height="100%"/></div>
 				<div class="tour_details">
-					<h4>y </h4>
+					<h4>Tourist Traveller </h4>
 					<h5>Category : 18 Seater</h5>
 					<p><strong>Vehicle</strong> : Tourist Traveller</p>
-					<p></p>
+					<p>Contact : 9526451178</p>
 					<div class="readmore"><a href="http://bluemaxholidays.com/kerala-taxi-traveller.html">Read More</a></div>
 				</div>
 				<div class="clear"></div>
