updated contact form with formspree

--- a/contact-us.html
+++ b/contact-us.html
@@ -199,7 +199,7 @@ drawMenus();
 <div style="text-align: justify;"><strong><span style="color: rgb(51, 51, 153); ">Email:&nbsp;info@bluemaxholidays.com</span></strong></div>
 </div></td>
         <td valign="top">
-			        <form id="target"  method="post" action="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" name="booking_form">
+			        <form id="target"  method="post" action="https://formspree.io/f/xjvdrlly" name="booking_form">
 
           <table width="100%" cellspacing="2" cellpadding="3" border="0" align="center">
             <tbody>
