fixed date selecter in contact form

--- a/contact-us.html
+++ b/contact-us.html
@@ -240,7 +240,8 @@ drawMenus();
               <tr>
                 <td align="right" class="subheading"><span style="color:#cc0000">*</span>&nbsp;Date of Tour</td>
                 <td>&nbsp;</td>
-                <td><input type="text" value="" class="textbox required" id="date" name="date" onclick="scwShow(this,event);" readonly></td>
+                <td><input type="date" class="textbox required" id="date" name="date" value="yyyy-mm-dd" class="input-medium search-query" readonly></td>
+                <!-- old code <input type="text" value="" class="textbox required" id="date" name="date" onclick="scwShow(this,event);" readonly>-->
                 <td>&nbsp;</td>
               </tr>
               <tr>
