about us info and removed accomodation and art culture from nav menu

--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@ drawMenus();
 
       <p><p><span style="font-size: larger;"><b><span lang="EN-US">Dear guests,</span></b></span></p>
 <p><b><span lang="EN-US">&nbsp; &nbsp;</span></b></p>
-<p><b>Bluemax is a team of tourism professinals committed to providing best travel sevice for its clients for last three years. Our operation is based on Cochin providing tour packages to South India and North Indian. &nbsp;</b></p>
+<p><b>Bluemax is a team of tourism professinals committed to providing best travel sevice for its clients for last nine years. Our operation is based on Cochin providing tour packages to South India and North Indian. &nbsp;</b></p>
 <p class="MsoNormal" style="text-align:justify"><b>We do tailor made packages such as honeymoon package, group tour, students tour etc. Apart from package we do hotel reservation, cab booking, houseboat booking, ayurveda packages and ticketing (airline, train, and bus</b>)</p>
 <p><b style="text-align: justify;">We are a team of young enthusiastic tourism professionals who are at the service of our clients for 24*7 hours. Hope we can offer you best rate to Kerala and other neighboring states comparing to others. &nbsp;</b><b><span lang="EN-US">&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span></b></p>
 <p class="MsoNormal">&nbsp;</p>
@@ -360,8 +360,8 @@ mso-bidi-theme-font:minor-latin">&nbsp;</span></p>
 
       <!--FOOTER AREA START-->
       <div id="Footer_area">
-                  <div id="Leftfooter">Copyright @ 2016 www.bluemaxholidays.com. All Rights Reserved </div>
-                  <div id="Rightfooter">Design & Developed by <a href="http://www.oxfotech.com/" target="_blank">www.oxfotech.com</a></div>
+                  <div id="Leftfooter">Copyright @ 2016 -2023 www.bluemaxholidays.com. All Rights Reserved </div>
+                  <div id="Rightfooter">Design & Developed by <a href="http://www.danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 
 <!--Start of Zopim Live Chat Script-->
