added back nav menu art

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ drawMenus();
                 	<li><a href="https://bluemaxholidays.com/index.html" class="active">Home</a></li>
                     <li><a href="https://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
                     <li><a href="https://bluemaxholidays.com/kerala-taxi.html" class="">Cab Services</a></li>
-                    <!--<li><a href="https://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>-->
+										<li><a href="https://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
                     <li><a href="https://bluemaxholidays.com/tour-packages.html" class="">Tour&nbsp;Packages</a></li>
                     <!--<li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>-->
                     <li><a href="https://bluemaxholidays.com/travel-desk.html" class="">Travel&nbsp;Desk</a></li>
