fixed nav meu items

--- a/travel-desk.html
+++ b/travel-desk.html
@@ -152,10 +152,10 @@ drawMenus();
      				<ul>
                 	<li><a href="http://bluemaxholidays.com/index.html" class="">Home</a></li>
                     <li><a href="http://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
-                    <li><a href="#" id='A3' onMouseOver='popup("A3","A3");' onMouseOut='popdown()' class="">Destinations</a></li>
+                    <li><a href="https://bluemaxholidays.com/kerala-taxi.html" class="">Cab Services</a></li>
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="">Tour&nbsp;Packages</a></li>
-                    <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6" class="">Accomodation</a></li>
+                    <!--<li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>-->
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=7" class="active">Travel&nbsp;Desk</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" class="">Contact&nbsp;Us </a></li>
                 </ul>
