--- a/hotel-booking.html
+++ b/hotel-booking.html
@@ -152,7 +152,7 @@ drawMenus();
      				<ul>
                 	<li><a href="http://bluemaxholidays.com/index.html" class="">Home</a></li>
                     <li><a href="http://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
-                    <li><a href="#" id='A3' onMouseOver='popup("A3","A3");' onMouseOut='popdown()' class="">Destinations</a></li>
+                    <li><a href="https://bluemaxholidays.com/kerala-taxi.html" class="">Cab Services</a></li>
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="">Tour&nbsp;Packages</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6" class="active">Accomodation</a></li>
