fixed nav meu items

--- a/two-nights-three-days-backwater-tours.html
+++ b/two-nights-three-days-backwater-tours.html
@@ -154,7 +154,7 @@ drawMenus();
                     <li><a href="http://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
                     <li><a href="https://bluemaxholidays.com/kerala-taxi.html" class="">Cab Services</a></li>
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
-                    <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="active">Tour&nbsp;Packages</a></li>
+                    <li><a href="href="https://bluemaxholidays.com/tour-packages.html" class="active">Tour&nbsp;Packages</a></li>
                     <!--<li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>-->
                     <li><a href="https://bluemaxholidays.com/travel-desk.html" class="">Travel&nbsp;Desk</a></li>
                     <li><a href="https://bluemaxholidays.com/contact-us.html" class="">Contact&nbsp;Us </a></li>
@@ -170,7 +170,7 @@ drawMenus();
      <div id="Whatsnew_head">What’s New</div>
       <div id="Whatsnew_textarea">
         <ul>
-          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&cid=3" class="active">Alleppey Kumarakom Houseboat Honeymoon packages</a></li><li><a href="#" class="active">2 NIGHTS 3 DAYS BACKWATER PACKAGE</a></li>        </ul>
+          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="href="https://bluemaxholidays.com/tour-packages.html&cid=3" class="active">Alleppey Kumarakom Houseboat Honeymoon packages</a></li><li><a href="#" class="active">2 NIGHTS 3 DAYS BACKWATER PACKAGE</a></li>        </ul>
       </div>
       <div class="clear"></div>
     </div>
