--- a/about.html
+++ b/about.html
@@ -153,9 +153,9 @@ drawMenus();
                 	<li><a href="http://bluemaxholidays.com/index.html" class="">Home</a></li>
                     <li><a href="http://bluemaxholidays.com/about.html" class="active">About&nbsp;Us </a></li>
                     <li><a href="https://bluemaxholidays.com/kerala-taxi.html" class="">Cab Services</a></li>
-                    <li><a href="http://bluemaxholidays.com/arts-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
+                    <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
                     <li><a href="http://bluemaxholidays.com/tour-packages.html" class="">Tour&nbsp;Packages</a></li>
-                    <li><a href="http://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>
+                    <!--<li><a href="http://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>-->
                     <li><a href="http://bluemaxholidays.com/travel-desk.html" class="">Travel&nbsp;Desk</a></li>
                     <li><a href="http://bluemaxholidays.com/constavt-us-html" class="">Contact&nbsp;Us </a></li>
                 </ul>
