--- a/contact-us.html
+++ b/contact-us.html
@@ -156,7 +156,7 @@ drawMenus();
                     <li><a href="https://bluemaxholidays.com/tour-packages.html" class="">Tour&nbsp;Packages</a></li>
                     <!--<li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>-->
                     <li><a href="https://bluemaxholidays.com/travel-desk.html" class="">Travel&nbsp;Desk</a></li>
-                    <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" class="active">Contact&nbsp;Us </a></li>
+                    <li><a href="http://bluemaxholidays.com/contact-us.html" class="active">Contact&nbsp;Us </a></li>
                 </ul>
       <div class="clear"></div>
     </div>
