fixed nav meu items

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ Legend says that ancient system of medicine was.. instrcted to the ancient sages
                         <ul>
                             <li><a href="https://bluemaxholidays.com/overview.html">Overview</a></li>
                             <li><a href="https://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
-                            <li><a href="https://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=4">Art & Culture</a></li>
+                            <li><a href="https://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
                             <li><a href="https://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
                             <li><a href="https://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
                       	</ul>
