--- a/travel-desk.html
+++ b/travel-desk.html
@@ -156,7 +156,7 @@ drawMenus();
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
                     <li><a href="https://bluemaxholidays.com/tour-packages.html" class="">Tour&nbsp;Packages</a></li>
                     <!--<li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>-->
-                    <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=7" class="active">Travel&nbsp;Desk</a></li>
+                    <li><a href="http://bluemaxholidays.com/travel-desk.html" class="active">Travel&nbsp;Desk</a></li>
                     <li><a href="https://bluemaxholidays.com/contact-us.html" class="">Contact&nbsp;Us </a></li>
                 </ul>
       <div class="clear"></div>
