--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Legend says that ancient system of medicine was.. instrcted to the ancient sages
                <!--FOOTER AREA START-->
                 <div id="Footer_area">
                   <div id="Leftfooter">Copyright @ 2016 -2023 www.bluemaxholidays.com. All Rights Reserved </div>
-                  <div id="Rightfooter">Design & Developed by <a href="https://www.danjose.pt/" target="_blank">www.danjose.pt</a></div>
+                  <div id="Rightfooter">Design & Developed by <a href="https://danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 
 <!--Start of Zopim Live Chat Script-->
