--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@ mso-bidi-theme-font:minor-latin">&nbsp;</span></p>
       <!--FOOTER AREA START-->
       <div id="Footer_area">
                   <div id="Leftfooter">Copyright @ 2016 -2023 www.bluemaxholidays.com. All Rights Reserved </div>
-                  <div id="Rightfooter">Design & Developed by <a href="http://www.danjose.pt/" target="_blank">danjose.pt</a></div>
+                  <div id="Rightfooter">Design & Developed by <a href="http://danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 
 <!--Start of Zopim Live Chat Script-->
