--- a/contact-us.html
+++ b/contact-us.html
@@ -463,7 +463,7 @@ drawMenus();
       <!--FOOTER AREA START-->
       <div id="Footer_area">
                   <div id="Leftfooter">Copyright @ 2016 - 2023 www.bluemaxholidays.com. All Rights Reserved </div>
-                  <div id="Rightfooter">Design & Developed by <a href="http://www.danjose.pt/" target="_blank">www.danjose.pt</a></div>
+                  <div id="Rightfooter">Design & Developed by <a href="http://danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 
 <!--Start of Zopim Live Chat Script-->
