--- a/two-nights-three-days-tour-package.html
+++ b/two-nights-three-days-tour-package.html
@@ -514,7 +514,7 @@ color:#002060">Kanyakumari the southern tip of Indian Sub continent and an impor
       <!--FOOTER AREA START-->
       <div id="Footer_area">
                   <div id="Leftfooter">Copyright @ 2015 www.bluemaxholidays.com. All Rights Reserved </div>
-                  <div id="Rightfooter">Design & Developed by <a href="http://www.oxfotech.com/" target="_blank">www.oxfotech.com</a></div>
+                  <div id="Rightfooter">Design & Developed by <a href="http://danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 
 <!--Start of Zopim Live Chat Script-->
