--- a/two-nights-three-days-tour-package.html
+++ b/two-nights-three-days-tour-package.html
@@ -517,6 +517,11 @@ color:#002060">Kanyakumari the southern tip of Indian Sub continent and an impor
                   <div id="Rightfooter">Design & Developed by <a href="http://danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 
+
+<script>
+        var year = new Date().getFullYear();
+        document.getElementById("yearNumber").innerHTML = year;
+</script> 
 <!--Start of Zopim Live Chat Script-->
 <script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
