--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ Legend says that ancient system of medicine was.. instrcted to the ancient sages
 
                <!--FOOTER AREA START-->
                 <div id="Footer_area">
-                  <div id="Leftfooter">Copyright @ 2016 -<span id="yearNumber"></span> www.bluemaxholidays.com. All Rights Reserved </div>
+                  <div id="Leftfooter">Copyright @ 2016 - <span id="yearNumber"></span> www.bluemaxholidays.com. All Rights Reserved </div>
                   <div id="Rightfooter">Design & Developed by <a href="https://danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 								<script>
@@ -409,6 +409,11 @@ Legend says that ancient system of medicine was.. instrcted to the ancient sages
 						    </script>
 
 
+
+<script>
+        var year = new Date().getFullYear();
+        document.getElementById("yearNumber").innerHTML = year;
+</script>
 <!--Start of Zopim Live Chat Script-->
 <script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
