--- a/kashmir-tour-package.html
+++ b/kashmir-tour-package.html
@@ -394,10 +394,15 @@ color:windowtext">On arrival at Srinagar you will be met</span><span style="font
 
       <!--FOOTER AREA START-->
       <div id="Footer_area">
-                  <div id="Leftfooter">Copyright @ 2016 -2023 www.bluemaxholidays.com. All Rights Reserved </div>
+                  <div id="Leftfooter">Copyright @ 2016 - <span id="yearNumber"></span> www.bluemaxholidays.com. All Rights Reserved </div>
                   <div id="Rightfooter">Design & Developed by <a href="http://danjose.pt/" target="_blank">danjose.pt</a></div>
                 </div>
 
+
+<script>
+        var year = new Date().getFullYear();
+        document.getElementById("yearNumber").innerHTML = year;
+</script> 
 <!--Start of Zopim Live Chat Script-->
 <script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
