added cab banner

--- a/kerala-taxi.html
+++ b/kerala-taxi.html
@@ -163,7 +163,7 @@ drawMenus();
     </div>
     <!--NAVIGATION AREA END-->
 
-		<div id="Banner"> </div>
+		<div id="Banner"><img src="http://bluemaxholidays.com/uploaded_files/banner/image_16.jpg" width="" height="" title="" alt="Inner 1" border="0"> </div>
 
 
 		<div id="Whatsnew_area">
@@ -238,7 +238,7 @@ drawMenus();
 <script>
         var year = new Date().getFullYear();
         document.getElementById("yearNumber").innerHTML = year;
-</script> 
+</script>
 <!--Start of Zopim Live Chat Script-->
 <script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
