--- a/ayurveda-health-tourism-package.html
+++ b/ayurveda-health-tourism-package.html
@@ -154,7 +154,7 @@ drawMenus();
                     <li><a href="http://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
                     <li><a href="https://bluemaxholidays.com/kerala-taxi.html" class="">Cab Services</a></li>
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
-                    <li><a href="href="https://bluemaxholidays.com/tour-packages.html" class="active">Tour&nbsp;Packages</a></li>
+                    <li><a href="https://bluemaxholidays.com/tour-packages.html" class="active">Tour&nbsp;Packages</a></li>
                     <!--<li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>-->
                     <li><a href="https://bluemaxholidays.com/travel-desk.html" class="">Travel&nbsp;Desk</a></li>
                     <li><a href="https://bluemaxholidays.com/contact-us.html" class="">Contact&nbsp;Us </a></li>
@@ -211,85 +211,15 @@ drawMenus();
         </div>
         <!--LEFT CONTENT AREA END-->
 
-        <!--RIGHT CONTENT AREA START-->
+				<!--RIGHT CONTENT AREA START-->
 		         <div id="RightContentarea">
           <div id="RightLinks">
-		              <h2>Select Another District</h2>
+		              <h2>New packages coming soon</h2>
             <ul>
 
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=38">Uttar Pradesh</a></li>
+              <li><a href="http://bluemaxholidays.com/#">Item1</a></li>
 
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=37">Uttar Pradesh</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=36">Nepal</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=35">Kashmir</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=34">Hyderabad</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=33">Goa</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=1">Ernakulam</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=5">Idukki</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=16">Kottayam</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=2">Alappuzha</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=4">Kollam</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=3">Pathanamthitta</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=6">Thiruvananthapuram</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=11">Wayanad</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=15">Thrissur</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=14">Palakkad</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=13">Malappuram</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=12">Kozhikode</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=10">Kasaragod</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=7">Kannur</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=17">Bangalore</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=18">Mysore</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=20">Ooty</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=21">Masanagudi</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=22">Kodaikanal</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=24">Rameshwaram</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=23">Madurai</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=19">Coorg</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=28">Goa</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=8">Delhi</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=26">Jaipur</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=27">Manali</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=25">Agra</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=29">Dubai</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=30">Andaman Islands</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=31">Singapore</a></li>
-
-              <li><a href="http://bluemaxholidays.com/index.php?app=destination&tpl=view&task=showAll&mid=3&district_id=32">Malaysia</a></li>
+              <li><a href="http://bluemaxholidays.com/#">Item2</a></li>
 			             </ul>
           </div>
           <div class="clear"></div>
