--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>About Us</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
   	<meta name="keywords" content="bluemax holidays">
   	<meta name="description" content="About Us">
 <link rel="stylesheet" href="css/style.css" type="text/css" />
